HEAD - Fix wrong font-style option name. It is italic not italics

--- a/bundles/org.eclipse.jdt.doc.user/book.css
+++ b/bundles/org.eclipse.jdt.doc.user/book.css
@@ -5,7 +5,7 @@ span.control {
 }
 
 span.name {
-  font-style: italics;
+  font-style: italic;
 }
 
 span.code {
